# bifrost

./: Cargo.toml  README.md
bifrost/: Cargo.toml
bifrost-mongodb/: Cargo.toml
bifrost-mongodb-wasmtime/: Cargo.toml
bifrost-mongodb-wasmtime/src/: lib.rs
bifrost-mongodb/src/: lib.rs
bifrost/examples/: greet.rs
bifrost/src/: dispatcher.rs  dispatcher_browser.rs  lib.rs  op.rs
examples/env/: Cargo.toml
examples/env/src/: env.rs
examples/greet/: Cargo.toml
examples/greet/src/: greet.rs
examples/mongo/: Cargo.toml
examples/mongo/src/: mongo.rs
examples/yew/: Cargo.toml  index.html
examples/yew/src/: client.rs  lib.rs  main.rs
heimdall/: Cargo.toml
heimdall/src/: capability.rs  handlers.rs  lib.rs  registry.rs  resolver.rs  runtime.rs  store.rs  types.rs
heimdall/src/resolver/: disk.rs
heimdall/src/store/: disk.rs
