[package]
name = "bifrost-mongodb-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bson = "2.4.0"
mongodb = "2.3.1"
rmp-serde = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
wasi-common = "2.0.1"
wasmtime = "2.0.1"
wasmtime-wasi = "2.0.1"
