[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.8.0", optional = true }
gloo-net = { version = "0.2.4", optional = true }
reqwest = { version = "0.11.12", features = ["json"], optional = true }
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.87"

[features]
local-native = ["reqwest"]
local-browser = ["gloo", "gloo-net"]
remote = []
