[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["multipart"] }
clap = { version = "4.0.17", features = ["derive"] }
log = "0.4.17"
moka = "0.9.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasi-common = "2.0.0"
wasmtime = "2.0.0"
wasmtime-wasi = "2.0.0"

[[bin]]
name = "heimdall"
path = "src/bin/heimdall.rs"
