[package]
name = "bifrost-example-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bifrost = { path = "../../bifrost" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"], optional = true }

[features]
local = ["bifrost/local-native", "tokio"]
remote = ["bifrost/remote"]

[[bin]]
name = "env-client"
path = "src/env.rs"
required-features = ["local"]

[[bin]]
name = "env-server"
path = "src/env.rs"
required-features = ["remote"]
