[package]
name = "bifrost-example-greet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bifrost = { path = "../../bifrost" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"], optional = true }

[features]
local = ["bifrost/local", "tokio"]
remote = ["bifrost/remote"]

[[bin]]
name = "greet-client"
path = "src/greet.rs"
required-features = ["local"]

[[bin]]
name = "greet-server"
path = "src/greet.rs"
required-features = ["remote"]
