[package]
name = "bifrost-example-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bifrost = { path = "../../bifrost" }
bifrost-mongodb = { path = "../../bifrost-mongodb", optional = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"], optional = true }

[features]
local = ["bifrost/local-native", "tokio"]
remote = ["bifrost/remote", "bifrost-mongodb"]
debug = ["bifrost/debug", "tokio"]

[[bin]]
name = "mongo-client"
path = "src/mongo.rs"
required-features = ["local"]

[[bin]]
name = "mongo-server"
path = "src/mongo.rs"
required-features = ["remote"]
